Finished formatting and continued TA 5

--- a/Critique of Pure Reason/Introduction - I.html
+++ b/Critique of Pure Reason/Introduction - I.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>I. Of the Difference Between Pure and Empirical Knowledge</title>
+<title>Introduction I</title>
 <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -96,7 +96,7 @@
 <p class="indent">Kant's basic idea is that humans impose concepts, categories, and rational order on an otherwise chaotic stream of colors, sounds, etc. This is impossible to verify because we cannot "switch off" our cognitive faculty. But it has an inherent plausibility if we observe the behavior of small children and remember our own experiences of being a small child, when presumably our cognitive faculty was not fully formed. (Of course, it's problematic for Kant's view that the strength of our cognitive faculty appears to depend on physical development in our brains, but never mind.) But this distinction between the pure sensation of the child vs. the ordered sensation of the adult does not at all track to the a priori - a posteriori distinction. If "a posteriori" related to pure sensation, then the notion of a "a posteriori proposition" would be nonsensical, since a proposition is fundamentally about concepts, objects, etc.</p>
 
 <hr>
-<p style="text-align:left;">&larr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Preface to the Second Edition.html'>Previous section</a> <span style="float:right;">&rarr; <a href='https://ericlyonshansen.github.io/Introduction - II.html'>Next section</a></span></p>
+<p style="text-align:left;">&larr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Preface to the Second Edition.html'>Previous section</a> <span style="float:right;">&rarr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - II.html'>Next section</a></span></p>
 <br>
 Go <a href='https://ericlyonshansen.github.io'>back</a> to the main page.
 </body>
