--- a/Critique of Pure Reason/Introduction - II.html
+++ b/Critique of Pure Reason/Introduction - II.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>II. The Human Intellect, Even In An Unphilosophical State, Is In Possession Of Certain Cognitions A Priori</title>
+<title>Introduction II</title>
 <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -75,7 +75,7 @@
 Premise (2) is clearly the problematic one. Kant seems to equivocate on the word "source" here. (The original line is "Denn wo wollte selbst Erfahrung ihre Gewißheit hernehmen, wenn alle Regeln, nach denen sie fortgeht, immer wieder empirisch, mithin zufällig wären;", translated as "For whence could our experience itself acquire certainty, if all the rules on which it depends were themselves empirical, and consequently fortuitous?" Kant uses a spatial metaphor, so I think the use of the word "source" as a gloss is accurate.) He correctly argues that, if all beliefs were entirely based on sense perceptions, then the concept of necessity would not arise. But humans have a brain with a memory. They can also establish (and even postulate) connections between brain states that have never been caused by sensory perceptions. Even small children can do this when they imagine a dog the size of house, for example. Once we understand the concept of 2 and the concept of addition, we grasp that 2 + 2 = 4 without the need for empirical verification. But this does not imply at all, as Kant fallaciously argues, that there is a internal "source" of knowledge, i.e. that our imaginative capacity <i>creates</i> its own imaginings. Rather, the human brain, by processing the concepts of "2" "4" and "addition," can grasp that they are defined in such a way as to guarantee the truth of "2 + 2 = 4", and to remove the need for external verification of it in each instance. But this "grasping" is not supplying any additional propositions, it is merely coming to see the connections which were already there in the propositions derived from sensory experience.</p>
 
 <hr>
-<p style="text-align:left;">&larr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - I.html'>Previous section</a> <span style="float:right;">&rarr; <a href='https://ericlyonshansen.github.io/Introduction - III.html'>Next section</a></span></p>
+<p style="text-align:left;">&larr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - I.html'>Previous section</a> <span style="float:right;">&rarr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - III.html'>Next section</a></span></p>
 <br>
 Go <a href='https://ericlyonshansen.github.io'>back</a> to the main page.
 </body>
