--- a/Critique of Pure Reason/Introduction - III.html
+++ b/Critique of Pure Reason/Introduction - III.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>III. Philosophy Stands In Need Of A Science Which Shall Determine The Possibility, Principles, And Extent Of Human Knowledge A Priori</title>
+<title>Introduction III</title>
 <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -84,7 +84,7 @@
 <p class="indent">This section seems to support the idea that Kant really did believe that mathematics and physics were synthetic a priori truths. We see him grappling with the idea that mathematics has given us so much knowledge, even though its entirely a priori, but why can't metaphysics? We feel him apologizing for the metaphysical claims of Leibniz and Wolff. Could philosophy have been averted from its Hegelian path if someone had simply shown Kant the fallacy of "reifying the model"? Or convinced him that mathematics is analytic? Or that a priority is a psychological property, and not a metaphysical one? Or that a priority pertains to the method of justification of a proposition, rather than its source? This section would make it seem so. Although the primary problem of Kant's Christian motivation would still be present. We must not forget that Kant's primary aim is to imbue the self with supernatural powers. The primary aim of transcendental idealism is to make the self an entity capable of making transcendental idealism true. Thus, what really see in this section is Kant's groping after a justification for transcendental idealism ex post facto. He knows that he wants to arrive at a self that is capable of imposing order on sensation, and he uses an apparent distinction between mathematics and metaphysics as a justification for that conclusion. (In reality, the only significant distinction between mathematics and metaphysics is that one is true and the other is false. Euclid's deductions are valid, whereas Wolff's are fallacious.)</p>
 
 <hr>
-<p style="text-align:left;">&larr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - II.html'>Previous section</a> <span style="float:right;">&rarr; <a href='https://ericlyonshansen.github.io/Introduction - IV.html'>Next section</a></span></p>
+<p style="text-align:left;">&larr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - II.html'>Previous section</a> <span style="float:right;">&rarr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - IV.html'>Next section</a></span></p>
 <br>
 Go <a href='https://ericlyonshansen.github.io'>back</a> to the main page.
 </body>
