--- a/Critique of Pure Reason/Introduction - IV.html
+++ b/Critique of Pure Reason/Introduction - IV.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>IV. Of The Difference Between Analytical And Synthetical Judgments</title>
+<title>Introduction IV</title>
 <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -74,7 +74,7 @@
     <td>
     </td>
     <td> 
-        <a id="Footnote 1">[1]</a>That is, judgments which really add to, and do not merely analyse or explain the conceptions which make up the sum of our knowledge.—Tr.
+        <p class="footnotes"><a id="Footnote 1">[1]</a>That is, judgments which really add to, and do not merely analyse or explain the conceptions which make up the sum of our knowledge.—Tr.</p>
     </td>
 </tr>
 </table>
@@ -86,7 +86,7 @@
 <p class="indent">It is also false to say that when we think a subject of a analytic claim, we also already think the predicate. With two different brain states, one cannot "contain" the other. Thus even "unmarried male" and "bachelor" do not convey exactly the same meaning. There is nothing of philosophical importance about this, and it is not worth a fraction of the ink that has been spilled over it. Rather, the brain states are simply different.</p>
 
 <hr>
-<p style="text-align:left;">&larr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - III.html'>Previous section</a> <span style="float:right;">&rarr; <a href='https://ericlyonshansen.github.io/Introduction - V.html'>Next section</a></span></p>
+<p style="text-align:left;">&larr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - III.html'>Previous section</a> <span style="float:right;">&rarr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - V.html'>Next section</a></span></p>
 <br>
 Go <a href='https://ericlyonshansen.github.io'>back</a> to the main page.
 </body>
