--- a/Critique of Pure Reason/Introduction - VI.html
+++ b/Critique of Pure Reason/Introduction - VI.html
@@ -3,16 +3,28 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kant's Critique of Pure Reason - The Universal Problem of Pure Reason - Meiklejohn's Translation - German and English Text - Bilingual Version</title>
-<link rel="stylesheet" href="style.css">
+<title>Introduction VI</title>
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-<h1>Kant's Critique of Pure Reason - The Universal Problem of Pure Reason - Meiklejohn's Translation - German and English Text - Bilingual Version</h1>
+<h1>Kant's Critique of Pure Reason (2nd Ed.) with Commentary</h1>
 
-<h3>Source</h3>
-The German text is from the 2nd edition produced in 1787 in Riga by Johann Friedrich Hartknoch, archived by Google Books (https://www.google.com/books/edition/Critik_der_reinen_Vernunft/qZEPAAAAQAAJ?hl=en), and pulled from the Zentralbegriffe der klassisch-romantischen Kunstperiode (ZBK), (http://www.zbk-online.de/texte/A0368.htm). The English text is from the John Meiklejohn translation published in London in 1855, archived by Google Books (https://www.google.com/books/edition/Critique_of_pure_reason_tr_by_J_M_D_Meik/E74IAAAAQAAJ?hl=en) and pulled from Wikisource (https://en.wikisource.org/wiki/Critique_of_Pure_Reason_(Meiklejohn)/Introduction#a6).
+<hr>
+<h4>INTRODUCTION</h4>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - II.html'>I.—Of the Difference Between Pure and Empirical Knowledge</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - II.html'>II.—The Human Intellect, Even in an Unphilosophical State, Is in Possession of Certain Cognitions A Priori</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - III.html'>III.—Philosophy Stands in Need of a Science Which Shall Determine the Possibility, Principles, and Extent of Human Knowlege A Priori</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - IV.html'>IV.—Of the Difference Between Analytical and Synthetical Judgments</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - V.html'>V.—In All Theoretical Sciences of Reason, Synthetical Judgments A Priori are Contained as Principles</a></p>
+<p class='indent'><b>VI.—The General Problem of Pure Reason *</b></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - VII.html'>VII.—Idea and Division of a Particular Science, Under the Name of a Critique of Pure Reason</a></p>
 <br>
+(Click <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Table of Contents.html'>here</a> to return to the table of contents.)
+<hr>
+<h3>Summary</h3>
+
+<p class="indent">Kant in this passage rhetorically reinforces his idea that the Critique of Pure Reason is going to be a sort of "middle-way" between skepticism and dogmatism. The passage raises many questions, but does not yet provide answers, about how synthetic a priori knowledge is possible.</p>
 <br>
 
 <table>
@@ -21,10 +33,10 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
 <th>English text</th>
 <tr>
     <td>
-        Allgemeine Aufgabe der reinen Vernunft.
+        VI. Allgemeine Aufgabe der reinen Vernunft.
     </td>
     <td> 
-        The Universal Problem of Pure Reason.
+        VI. The Universal Problem of Pure Reason.
     </td>
 </tr>
 <tr>
@@ -115,37 +127,26 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
         We may and must, therefore, regard the attempts hitherto made to establish metaphysical science dogmatically as non-existent. For what of analysis, that is, mere dissection of conceptions, is contained in one or other, is not the aim of, but only a preparation for metaphysics proper, which has for its object the extension, by means of synthesis, of our à priori knowledge. And for this purpose, mere analysis is of course useless, because it only shews what is contained in these conceptions, but not how we arrive, à priori, at them; and this it is her duty to shew, in order to be able afterwards to determine their valid use in regard to all objects of experience, to all knowledge in general. But little self-denial, indeed, is needed to give up these pretensions, seeing the undeniable, and in the dogmatic mode of procedure, inevitable contradictions of Reason with herself, have long since ruined the reputation of every system of metaphysics that has appeared up to this time. It will require more firmness to remain undeterred by difficulty from within, and opposition from without, from endeavouring, by a method quite opposed to all those hitherto followed, to further the growth and fruitfulness of a science indispensable to human reason—a science from which every branch it has borne may be cut away, but whose roots remain indestructible.
     </td>
 </tr>
-<!-- <a href="#Footnote 1">[1]</a> -->
-
-</table>
-
-<h3>Footnotes</h3>
-<table>
 <tr>
-<th>German text</th>
-<th>English text</th>
+    <td>
+        Footnotes
+    </td>
 </tr>
 <tr>
     <td>
-        <a id="Footnote 1">[1]</a> Von der reinen Naturwissenschaft könnte mancher dieses letztere noch bezweifeln. Allein man darf nur die verschiedenen Sätze, die im Anfange der eigentlichen (empirischen) Physik vorkommen, nachsehen, als den von der Beharrlichkeit derselben Quantität Materie, von der Trägheit, der Gleichheit der Wirkung und Gegenwirkung u. s. w., so wird man bald überzeugt werden, daß sie eine Physicam puram (oder rationalem) ausmachen, die es wol verdient, als eigene Wissenschaft, in ihrem engen oder weiten, aber doch ganzen Umfange, abgesondert aufgestellt zu werden. 
+        <p class="footnotes"><a id="Footnote 1">[1]</a> Von der reinen Naturwissenschaft könnte mancher dieses letztere noch bezweifeln. Allein man darf nur die verschiedenen Sätze, die im Anfange der eigentlichen (empirischen) Physik vorkommen, nachsehen, als den von der Beharrlichkeit derselben Quantität Materie, von der Trägheit, der Gleichheit der Wirkung und Gegenwirkung u. s. w., so wird man bald überzeugt werden, daß sie eine Physicam puram (oder rationalem) ausmachen, die es wol verdient, als eigene Wissenschaft, in ihrem engen oder weiten, aber doch ganzen Umfange, abgesondert aufgestellt zu werden.</p>
     </td>
     <td> 
-        <a id="Footnote 1">[1]</a> As to the existence of pure natural science, or physics, perhaps many may still express doubts. But we have only to look at the different propositions which are commonly treated of at the commencement of proper (empirical) physical science—those, for example, relating to the permanence of the same quantity of matter, the vis inertiæ, the equality of action and reaction, &c.—to be soon convinced that they form a science of pure physics (physica pura, or rationalis), which well deserves to be separately exposed as a special science, in its whole extent, whether that be great or confined.
+        <p class="footnotes"><a id="Footnote 1">[1]</a> As to the existence of pure natural science, or physics, perhaps many may still express doubts. But we have only to look at the different propositions which are commonly treated of at the commencement of proper (empirical) physical science—those, for example, relating to the permanence of the same quantity of matter, the vis inertiæ, the equality of action and reaction, &c.—to be soon convinced that they form a science of pure physics (physica pura, or rationalis), which well deserves to be separately exposed as a special science, in its whole extent, whether that be great or confined.</p>
     </td>
 </tr>
 </table>
 
-<h1>Commentary</h1>
+<h3>Commentary</h3>
 
-<h3>Summary</h3>
+<p class="indent">Kant's treatment of Hume in this passage is interesting. He almost apologizes for Hume and says "had Hume seen the problem as I have formulated it, then he surely would have agreed with me." I don't think this is correct, however. Hume, as an empiricist, would likely simply have denied the existence of synthetic a priori judgments. What is more telling is Kant's description of what would happen if Hume were correct in saying that there is no necessary connection between a cause and an effect. This would be "destructive to all pure philosophy." But it would also be "destructive to all pure mathematics." This just appears to be a fallacious argument. Could we not have a world in which the laws of physics (which deal with causality) are a posteriori judgments, but the laws of mathematics are a priori judgments? Indeed, isn't that the very world we inhabit? Kant's mistakes are to assert that (1) the laws of physics are a priori (in fact, the Newtonian laws of physics he held to be necessary truths have now been shown to be false); and (2) the laws of mathematics are synthetic (rather, mathematics is just an axiomatic system where everything follows from the definition of the system - I'm ignoring meta-statements ala Godel's incompleteness theorem since those just obviously don't count). Kant is wrong to assume, as Hume equally was, that anything especially signficant results from the Humean view of causation. It is only if we start from the Christian/Scholastic view of the universe where all things have a little "soul" that obeys God's laws and that results in a perfectly harmonious orderly procession of movements and events that we are bothered by the assertion that these little "souls" do not exist. It is only when we demand 100% certainty that we are troubled by the fact that the laws of nature are not necessary. We do well to remember that Hume's thesis is purely epistemological. It only states that, as far as we know, as far as we have sensory access to, there is no necessary connection between a cause and an effect. But, as long as the regularity of the Universe holds out, we are justified in assuming that objects impose their effects on other objects regularly, due to something in their natures (or the natures of space and time), as an inference to the best explanation. Thus, we can still philosophize about the nature of energy, or space, or time, or God (i.e., engage in "pure philosophy") even if we deny that the laws of physics are merely a posteriori summations of previous events (or rather imaginative/mathematical models that are useful in predicting future events). There is simply no connection between the purported necessity of physical laws and our ability to engage in philosophy.</p>
 
-<p>Kant in this passage rhetorically reinforces his idea that the Critique of Pure Reason is going to be a sort of "middle-way" between skepticism and dogmatism. The passage raises many questions, but does not yet provide answers, about how synthetic a priori knowledge is possible.</p>
-
-<h3>Discussion</h3>
-
-<p>Kant's treatment of Hume in this passage is interesting. He almost apologizes for Hume and says "had Hume seen the problem as I have formulated it, then he surely would have agreed with me." I don't think this is correct, however. Hume, as an empiricist, would likely simply have denied the existence of synthetic a priori judgments. What is more telling is Kant's description of what would happen if Hume were correct in saying that there is no necessary connection between a cause and an effect. This would be "destructive to all pure philosophy." But it would also be "destructive to all pure mathematics." This just appears to be a fallacious argument. Could we not have a world in which the laws of physics (which deal with causality) are a posteriori judgments, but the laws of mathematics are a priori judgments? Indeed, isn't that the very world we inhabit? Kant's mistakes are to assert that (1) the laws of physics are a priori (in fact, the Newtonian laws of physics he held to be necessary truths have now been shown to be false); and (2) the laws of mathematics are synthetic (rather, mathematics is just an axiomatic system where everything follows from the definition of the system - I'm ignoring meta-statements ala Godel's incompleteness theorem since those just obviously don't count). Kant is wrong to assume, as Hume equally was, that anything especially signficant results from the Humean view of causation. It is only if we start from the Christian/Scholastic view of the universe where all things have a little "soul" that obeys God's laws and that results in a perfectly harmonious orderly procession of movements and events that we are bothered by the assertion that these little "souls" do not exist. It is only when we demand 100% certainty that we are troubled by the fact that the laws of nature are not necessary. We do well to remember that Hume's thesis is purely epistemological. It only states that, as far as we know, as far as we have sensory access to, there is no necessary connection between a cause and an effect. But, as long as the regularity of the Universe holds out, we are justified in assuming that objects impose their effects on other objects regularly, due to something in their natures (or the natures of space and time), as an inference to the best explanation. Thus, we can still philosophize about the nature of energy, or space, or time, or God (i.e., engage in "pure philosophy") even if we deny that the laws of physics are merely a posteriori summations of previous events (or rather imaginative/mathematical models that are useful in predicting future events). There is simply no connection between the purported necessity of physical laws and our ability to engage in philosophy.</p>
-
-<p>Kant's whole Critique of Pure Reason might be boiled down to the following lemma:
+<p class="indent">Kant's whole Critique of Pure Reason might be boiled down to the following lemma:
 <ol>
     <li>All previous arguments for the existence of God, the immoratility of the soul, and the freedom of the will have been fallacious.</li>
     <li>If (1) then either the arguments are fallacious because their conclusions are false, or they are false because human reason is not capable of formulating them.</li>
@@ -155,5 +156,9 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
 What an amazing move in the history of philosophy! Just put your desired proposition as one of your premisses, not your conclusion! No one had ever thought of it before.
 </p>
 
+<hr>
+<p style="text-align:left;">&larr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - V.html'>Previous section</a> <span style="float:right;">&rarr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - VII.html'>Next section</a></span></p>
+<br>
+Go <a href='https://ericlyonshansen.github.io'>back</a> to the main page.
 </body>
 </html>
