--- a/Critique of Pure Reason/Introduction - VII.html
+++ b/Critique of Pure Reason/Introduction - VII.html
@@ -3,16 +3,28 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kant's Critique of Pure Reason - Introduction VII. - Idea and Division of a Particular Science, Under the Name of a Critique of Pure Reason - Meiklejohn's Translation - German and English Text - Bilingual Version</title>
-<link rel="stylesheet" href="style.css">
+<title>Introduction VII</title>
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-<h1>Kant's Critique of Pure Reason - Introduction VII. - Idea and Division of a Particular Science, Under the Name of a Critique of Pure Reason - Meiklejohn's Translation - German and English Text - Bilingual Version</h1>
+<h1>Kant's Critique of Pure Reason (2nd Ed.) with Commentary</h1>
 
-<h3>Source</h3>
-The German text is from the 2nd edition produced in 1787 in Riga by Johann Friedrich Hartknoch, archived by Google Books (https://www.google.com/books/edition/Critik_der_reinen_Vernunft/qZEPAAAAQAAJ?hl=en), and pulled from the Zentralbegriffe der klassisch-romantischen Kunstperiode (ZBK), (http://www.zbk-online.de/texte/A0368.htm). The English text is from the John Meiklejohn translation published in London in 1855, archived by Google Books (https://www.google.com/books/edition/Critique_of_pure_reason_tr_by_J_M_D_Meik/E74IAAAAQAAJ?hl=en) and pulled from Wikisource (https://en.wikisource.org/wiki/Critique_of_Pure_Reason_(Meiklejohn)/Introduction#a7).
+<hr>
+<h4>INTRODUCTION</h4>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - II.html'>I.—Of the Difference Between Pure and Empirical Knowledge</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - II.html'>II.—The Human Intellect, Even in an Unphilosophical State, Is in Possession of Certain Cognitions A Priori</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - III.html'>III.—Philosophy Stands in Need of a Science Which Shall Determine the Possibility, Principles, and Extent of Human Knowlege A Priori</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - IV.html'>IV.—Of the Difference Between Analytical and Synthetical Judgments</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - V.html'>V.—In All Theoretical Sciences of Reason, Synthetical Judgments A Priori are Contained as Principles</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - VI.html'>VI.—The General Problem of Pure Reason</a></p>
+<p class='indent'><b>VII.—Idea and Division of a Particular Science, Under the Name of a Critique of Pure Reason *</b></p>
 <br>
+(Click <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Table of Contents.html'>here</a> to return to the table of contents.)
+<hr>
+<h3>Summary</h3>
+
+<p class="indent">Kant claims that his Critique of Pure Reason serves as a sketch of a future Organon of Pure Reason, and lays out the grounds and presents arguments for why the domain of Pure Reason is limited in certain ways. He introduces the central division in the Critique, between the "Doctrine of Elements," which discusses the use of pure reason with respect to our sensation of objects, and the "Doctrine of Method," which discusses the use of pure reason with respect to thought itself. (In fact, most of the Critique is taken up with the "Doctrine of Elements." The "Doctrine of Method" feels like a bit of an epilogue.)</p>
 <br>
 
 <table>
@@ -71,17 +83,15 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
 
 </table>
 
-<h1>Commentary</h1>
+<h3>Commentary</h3>
 
-<h3>Summary</h3>
+<p class="indent">If only there were a History of Philosophy teacher with enough courage to point out how delusional Kant is in this section. They could save their students a great deal of mental effort. That there is entity called a "faculty for pure reason" which could be the subject of a metaphysical treastise is the first delusion (for, mistake it not, the First Critique is a metaphysical treatise). A "faculty" is simply a useful label for grouping together certain mental capabilities. The mind or the brain might therefore be a worthy object for a philosophical treatise. But to treat a faculty for pure reason is already to endow this mind, as well as the abstract objects it thinks about, with a supernatural metaphysical status. "Faculty" is a metaphor. We might as well have a philosophical treatise on the "majesty" of the sun! But even worse is Kant's delusion that somehow his Critique is clearly the way for some ultimate "science" of pure reason. How many times will philosophers pretend that their work is only the foundations for some grand Principia will which come after?</p>
 
-<p>Kant claims that his Critique of Pure Reason will serve as a sort of sketch of a future Organon of Pure Reason, which lays out the grounds and presents arguments for why the domain is limited in these ways. He introduces the central division in the Critique, between the "Doctrine of Elements," which discusses the use of pure reason with respect to our sensation of objects, and the "Doctrine of Method," which discusses the use of pure reason with respect to thought itself. (In fact, most of the Critique is taken up with the "Doctrine of Elements." The "Doctrine of Method" feels like a bit of an afterthought or epilogue.)</p>
+<p class="indent">Here at the end of the introduction, not much has changed as far as Kant's argumentation has proceeeded. He has pretended to be merely offering distinctions, but he has pretty much assumed the existence of synthetic a priori knowledge, and a human mind with supernatural faculties. His one argument, that the concept of "3" is not contained in the concept of "2+1" is woefully inadequate, since "3" is just defined to be "2+1", but we do not often think about this fact, since we have had so many day-to-day associations with the number without ever inquiring into its definition. The development of set theory in the 20th century would also seem to confirm that numbers are simply defined in relation to one another, without possessing an independent character. Really think about the question "what is three?" What is the essence of three-ness? Unless we are Pythagoreans, I find it hard to imagine that we can have any real acquaitance with the essence of three-ness, except that it is one of the numbers on the number line.</p>
 
-<h3>Discussion</h3>
-
-<p>If only there were a History of Philosophy teacher with enough courage to point out how delusional Kant is in this section. They could save their students a great deal of mental effort. That there is entity called a "faculty for pure reason" which could be the subject of a metaphysical treastise is the first delusion (for, mistake it not, the First Critique is a metaphysical treatise). A "faculty" is simply a useful label for grouping together certain mental capabilities. The mind or the brain might therefore be a worthy object for a philosophical treatise. But to treat a faculty for pure reason is already to endow this mind, as well as the abstract objects it thinks about, with a supernatural metaphysical status. "Faculty" is a metaphor. We might as well have a philosophical treatise on the "majesty" of the sun! But even worse is Kant's delusion that somehow his Critique is clearly the way for some ultimate "science" of pure reason. How many times will philosophers pretend that their work is only the foundations for some grand Principia will which come after?</p>
-
-<p>Here at the end of the introduction, not much has changed as far as Kant's argumentation has proceeeded. He has pretended to be merely offering distinctions, but he has pretty much assumed the existence of synthetic a priori knowledge, and a human mind with supernatural faculties. His one argument, that the concept of "3" is not contained in the concept of "2+1" is woefully inadequate, since "3" is just defined to be "2+1", but we do not often think about this fact, since we have had so many day-to-day associations with the number without ever inquiring into its definition. The development of set theory in the 20th century would also seem to confirm that numbers are simply defined in relation to one another, without possessing an independent character. Really think about the question "what is three?" What is the essence of three-ness? Unless we are Pythagoreans, I find it hard to imagine that we can have any real acquaitance with the essence of three-ness, except that it is one of the numbers on the number line.</p>
-
+<hr>
+<p style="text-align:left;">&larr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - VI.html'>Previous section</a> <span style="float:right;">&rarr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 1.html'>Next section</a></span></p>
+<br>
+Go <a href='https://ericlyonshansen.github.io'>back</a> to the main page.
 </body>
 </html>
