--- a/Critique of Pure Reason/Transcendental Aesthetic - 5.html
+++ b/Critique of Pure Reason/Transcendental Aesthetic - 5.html
@@ -3,69 +3,110 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kant's Critique of Pure Reason - Transcendental Aethetic, * - Meiklejohn's Translation - German and English Text - Bilingual Version</title>
+<title>Transcendental Aesthetic §5</title>
 <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-<h1>Kant's Critique of Pure Reason - Transcendental Aethetic, * - Meiklejohn's Translation - German and English Text - Bilingual Version</h1>
+<h1>Kant's Critique of Pure Reason (2nd ed.) with Commentary</h1>
 
-<h3>Source</h3>
-The German text is from the 2nd edition produced in 1787 in Riga by Johann Friedrich Hartknoch, archived by Google Books (https://www.google.com/books/edition/Critik_der_reinen_Vernunft/qZEPAAAAQAAJ?hl=en), and pulled from the Zentralbegriffe der klassisch-romantischen Kunstperiode (ZBK), (http://www.zbk-online.de/texte/A0368.htm). The English text is from the John Meiklejohn translation published in London in 1855, archived by Google Books (https://www.google.com/books/edition/Critique_of_pure_reason_tr_by_J_M_D_Meik/E74IAAAAQAAJ?hl=en) and pulled from Wikisource (https://en.wikisource.org/wiki/Critique_of_Pure_Reason_(Meiklejohn)/Volume_1/Part_1*).
+<hr>
+<h4>TRANSCENDENTAL AESTHETIC</h4>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 1.html'>§ 1. Introductory</a></p>
+Section I. — Of Space<br>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 2.html'>§ 2. Metaphysical Exposition of this Conception</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 3.html'>§ 3. Transcendental Exposition of the Conception of Space</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 4.html'><b>§ 4. Conclusions from the foregoing Conceptions *</b></a></p>
+Section II. — Of Time<br>
+<p class='indent'><b>§ 5. Metaphysical Exposition of this Conception *</b></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 6.html'>§ 6. Transcendental Exposition of the Conception of Time</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 7.html'>§ 7. Conclusions from the above Conceptions</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 8.html'>§ 8. Elucidation</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 9.html'>§ 9. General Remarks on Transcendental Æsthetic</a></p>
 <br>
-<br>
-
-<table>
-<tr>
-<th>German text</th>
-<th>English text</th>
-<tr>
-    <td>
-        *
-    </td>
-    <td> 
-        *
-    </td>
-</tr>
-<tr>
-    <td>
-        
-    </td>
-    <td> 
-        
-    </td>
-</tr>
-<!-- <a href="#Footnote 1">[1]</a> -->
-
-</table>
-
-<h3>Footnotes</h3>
-<table>
-<tr>
-<th>German text</th>
-<th>English text</th>
-</tr>
-<tr>
-    <td>
-        <a id="Footnote 1">[1]</a>
-    </td>
-    <td> 
-        <a id="Footnote 1">[1]</a>
-    </td>
-</tr>
-</table>
-
-<h1>Commentary</h1>
+(Click <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Table of Contents.html'>here</a> to return to the table of contents.)
+<hr>
 
 <h3>Summary</h3>
+<p class="indent">
 
-<p></p>
+</p>
+<br>
+<br>
 
-<h3>Discussion</h3>
+<table>
+<tr>
+<th>German text</th>
+<th>English text</th>
+<tr>
+    <td>
+        Der Transscendentalen Aesthetik - Zweiter Abschnitt - Von der Zeit.
+    </td>
+    <td> 
+        SECTION II. Of Time. 
+    </td>
+</tr>
+<tr>
+    <td>
+        §. 4. Metaphysische Erörterung des Begriffs der Zeit.
+    </td>
+    <td> 
+        § 5. Metaphysical exposition of this conception.
+    </td>
+</tr>
+<tr>
+    <td>
+        Die Zeit ist 1) kein empirischer Begriff, der irgend von einer Erfahrung abgezogen worden. Denn das Zugleichseyn oder Aufeinanderfolgen würde selbst nicht in die Wahrnehmung kommen, wenn die Vorstellung der Zeit nicht a priori zum Grunde läge. Nur unter deren Voraussetzung kann man sich vorstellen: daß einiges zu einer und derselben Zeit (zugleich) oder in verschiedenen Zeiten (nach einander) sey.
+    </td>
+    <td>
+        1. Time is not an empirical conception. For neither co-existence nor succession would be perceived by us, if the representation of time did not exist as a foundation à priori. Without this presupposition we could not represent to ourselves that things exist together at one and the same time, or at different times, that is, contemporaneously, or in succession.
+    </td>
+</tr>
+<tr>
+    <td>
+        2) Die Zeit ist eine nothwendige Vorstellung, die allen Anschauungen zum Grunde liegt. Man kann in Ansehung der Erscheinungen überhaupt die Zeit selbsten nicht aufheben, ob man zwar ganz wohl die Erscheinungen aus der Zeit wegnehmen kann. Die Zeit ist also a priori gegeben. In ihr allein ist alle Wirklichkeit der Erscheinungen möglich. Diese können insgesamt wegfallen, aber sie selbst (als die allgemeine Bedingung ihrer Möglichkeit,) kann nicht aufgehoben werden.
+    </td>
+    <td>
+        2. Time is a necessary representation, lying at the foundation of all our intuitions. With regard to phænomena in general, we cannot think away time from them, and represent them to ourselves as out of and unconnected with time, but we can quite well represent to ourselves time void of phænomena. Time is therefore given à priori. In it alone is all reality of phænomena possible. These may all be annihilated in thought, but time itself, as the universal condition of their possibility, cannot be so annulled. 
+    </td>
+</tr>
+<tr>
+    <td>
+        3) Auf diese Nothwendigkeit a priori gründet sich auch die Möglichkeit apodictischer Grundsätze von den Verhältnissen der Zeit, oder Axiomen von der Zeit überhaupt. Sie hat nur Eine Dimension: verschiedene Zeiten sind nicht zugleich, sondern nach einander (so wie verschiedene Räume nicht nach einander, sondern zugleich sind). Diese Grundsätze können aus der Erfahrung nicht gezogen werden, denn diese würde weder strenge Allgemeinheit, noch apodictische Gewißheit geben. Wir würden nur sagen können: so lehrt es die gemeine Wahrnehmung; nicht aber: so muß es sich verhalten. Diese Grundsätze gelten als Regeln, unter denen überhaupt Erfahrungen möglich sind, und belehren uns vor derselben, und nicht durch dieselbe.
+    </td>
+    <td>
+        3. On this necessity à priori, is also founded the possibility of apodeictic principles of the relations of time, or axioms of time in general, such as, “Time has only one dimension,” “Different times are not co-existent but successive,” (as different spaces are not successive but co-existent). These principles cannot be derived from experience, for it would give neither strict universality, nor apodeictic certainty. We should only be able to say, "so common experience teaches us," but not it must be so. They are valid as rules, through which, in general, experience is possible; and they instruct us respecting experience, and not by means of it.
+    </td>
+</tr>
+<tr>
+    <td>
+        4) Die Zeit ist kein discursiver, oder, wie man ihn nennt, allgemeiner Begriff, sondern eine reine Form der sinnlichen Anschauung. Verschiedene Zeiten sind nur Theile eben derselben Zeit. Die Vorstellung, die nur durch einen einzigen Gegenstand gegeben werden kann, ist aber Anschauung. Auch würde sich der Satz daß verschiedene Zeiten nicht zugleich seyn können, aus einem allgemeinen Begriff nicht herleiten lassen. Der Satz ist synthetisch, und kann aus Begriffen allein nicht entspringen. Er ist also in der Anschauung und Vorstellung der Zeit unmittelbar enthalten.
+    </td>
+    <td>
+        4. Time is not a discursive, or as it is called, general conception, but a pure form of the sensuous intuition. Different times are merely parts of one and the same time. But the representation which can only be given by a single object is an intuition. Besides, the proposition that different times cannot be co-existent, could not be derived from a general conception. For this proposition is synthetical, and therefore cannot spring out of conceptions alone. It is therefore contained immediately in the intuition and representation of time.
+    </td>
+</tr>
+<tr>
+    <td>
+        5) Die Unendlichkeit der Zeit bedeutet nichts weiter, als daß alle bestimmte Größe der Zeit nur durch 48 Einschränkungen einer einigen zum Grunde liegenden Zeit möglich sey. Daher muß die ursprüngliche Vorstellung Zeit als uneingeschränkt gegeben seyn. Wovon aber die Theile selbst, und jede Größe eines Gegenstandes, nur durch Einschränkung bestimmt vorgestellt werden können, da muß die ganze Vorstellung nicht durch Begriffe gegeben seyn, (denn die enthalten nur Theilvorstellungen,) sondern es muß ihnen unmittelbare Anschauung zum Grunde liegen.
+    </td>
+    <td>
+        5. The infinity of time signifies nothing more than that every determined quantity of time is possible only through limitations of one time lying at the foundation. Consequently, the original representation, time, must be given as unlimited. But as the determinate representation of the parts of time and of every quantity of an object can only be obtained by limitation, the complete representation of time must not be furnished by means of conceptions, for these contain only partial representations. Conceptions, on the contrary, must have immediate intuition for their basis.
+    </td>
+</tr>
+</table>
 
-<p>Here we begin to see the origins of one of the well-known tensions in Kant's critique, namely the question of whether Kant is truly agnostic about the nature of things-in-themselves. He clearly asserts more than he should, if it were true that we were supposed to be agnostic about things-in-themselves. For example, denying the absolute reality of time to noumena, and implying (at least) that change to is absent from the realm of the noumena. Scholars have wasted vast quantities of ink trying to explain Kant's apparent contradiction here, naively believing him to be an ingenuous exhibitor of a novel epistemology. "He just oversteps himself in his excitement when he says that time is absent from the noumenal realm. Strictly speaking, he should say that time may be in the noumenal realm, or it may not be, but he is trying too hard to make his point that, in the phenomenal realm, time is nothing but the form of internal intuitions." I would suggest, on the contrary, that the entire purpose of Kant's system is to deny time and change in the noumenal realm. That was the end, and the means (the "discovery" of synthetic a priori truths and the concomitant transcendental reality of time and space) were formulated retroactively. Because the end is the retention of the supernatural, even if the world should burn because of it. And the establishment of ourselves as noumena, existing outside space and time, accomplishes this purpose.</p>
+<h3>Commentary</h3>
 
-<p>Every experience depends upon time, because experiences just are changes in our own mental state. But this is just a physical fact about the human brain. It does not imply at all that time *only* exists in our minds. </p>
+<p class="indent">Here we begin to see the origins of one of the well-known tensions in Kant's critique, namely the question of whether Kant is truly agnostic about the nature of things-in-themselves. He clearly asserts more than he should, if it were true that we were supposed to be agnostic about things-in-themselves. For example, denying the absolute reality of time to noumena, and implying (at least) that change to is absent from the realm of the noumena. Scholars have wasted vast quantities of ink trying to explain Kant's apparent contradiction here, naively believing him to be an ingenuous exhibitor of a novel epistemology. "He just oversteps himself in his excitement when he says that time is absent from the noumenal realm. Strictly speaking, he should say that time may be in the noumenal realm, or it may not be, but he is trying too hard to make his point that, in the phenomenal realm, time is nothing but the form of internal intuitions." I would suggest, on the contrary, that the entire purpose of Kant's system is to deny time and change in the noumenal realm. That was the end, and the means (the "discovery" of synthetic a priori truths and the concomitant transcendental reality of time and space) were formulated retroactively. Because the end is the retention of the supernatural, even if the world should burn because of it. And the establishment of ourselves as noumena, existing outside space and time, accomplishes this purpose.</p>
+
+<p class="indent">Every experience depends upon time, because experiences just are changes in our own mental state. But this is just a physical fact about the human brain. It does not imply at all that time *only* exists in our minds.</p>
+
+<p class="indent">Kant states here that the proposition "different times cannot be co-existent" is synthetic. This shows why he relied on his (slightly) more plausible arguments for the synthetic status of mathematical propositions, when he made his initial arguments for the existence of synthetic a priori propositions. If he had attempted to rely on spatio-temporal propositions, which, after all, are the actually significant ones with respect to transcendental idealism, he would have been on very shaky ground. "Different spaces are not located in the same place." I would ask the reader to ask themselves whether or not the predicate of these sentences is already in the subject.</p>
+
+<p class="indent">Here we see one of the most subtle instances of the "reifying the model" fallacy.</p>
+
+<p class="indent">The status of space and time do pose a challenge for the Epicurean...</p>
 
 </body>
 </html>
