--- a/Critique of Pure Reason/Transcendental Aesthetic - 4.html
+++ b/Critique of Pure Reason/Transcendental Aesthetic - 4.html
@@ -16,13 +16,13 @@
 Section I. — Of Space<br>
 <p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 2.html'>§ 2. Metaphysical Exposition of this Conception</a></p>
 <p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 3.html'>§ 3. Transcendental Exposition of the Conception of Space</a></p>
-<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 4.html'><b>§ 4. Conclusions from the foregoing Conceptions *</b></a></p>
+<p class='indent'><b>§ 4. Conclusions from the foregoing Conceptions *</b></p>
 Section II. — Of Time<br>
 <p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 5.html'>§ 5. Metaphysical Exposition of this Conception</a></p>
 <p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 6.html'>§ 6. Transcendental Exposition of the Conception of Time</a></p>
 <p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 7.html'>§ 7. Conclusions from the above Conceptions</a></p>
 <p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 8.html'>§ 8. Elucidation</a></p>
-<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 1.html'>§ 9. General Remarks on Transcendental Æsthetic</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 9.html'>§ 9. General Remarks on Transcendental Æsthetic</a></p>
 <br>
 (Click <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Table of Contents.html'>here</a> to return to the table of contents.)
 <hr>
